fixed alignments

--- a/About-Me.css
+++ b/About-Me.css
@@ -82,8 +82,8 @@
 
   .u-section-1 .u-text-2 {
     width: 681px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -233,6 +233,7 @@
 
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-2 {
